updated Spanish translation

--- a/po/wesnoth-low/es.po
+++ b/po/wesnoth-low/es.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
-"PO-Revision-Date: 2018-04-15 18:22+0200\n"
+"PO-Revision-Date: 2019-03-26 12:21+0100\n"
 "Last-Translator: Pepe <donpepe1963@gmail.com>\n"
 "Language-Team: Wesnoth\n"
 "Language: es\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: Poedit 2.0.6\n"
 
 #. [campaign]: id=LOW, type=hybrid
 #: data/campaigns/Legend_of_Wesmere/_main.cfg:49
@@ -42,10 +42,8 @@ msgstr ""
 
 #. [campaign]: id=LOW, type=hybrid
 #: data/campaigns/Legend_of_Wesmere/_main.cfg:53
-#, fuzzy
-#| msgid "(Intermediate level, 18 scenarios.)"
 msgid "(Hard level, 18 scenarios.)"
-msgstr "(Nivel intermedio, 18 escenarios.)"
+msgstr "(Nivel experto, 18 escenarios.)"
 
 #. [campaign]: id=LOW, type=hybrid
 #: data/campaigns/Legend_of_Wesmere/_main.cfg:55
@@ -782,17 +780,12 @@ msgstr ""
 
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/02_Hostile_Mountains.cfg:479
-#, fuzzy
-#| msgid ""
-#| "Our troubles will be yours, too, whether either of us will it or not. The "
-#| "orcs have come down from the north like a flood; if we squabble among "
-#| "ourselves they will feast on our discord."
 msgid ""
 "Our troubles will be yours, too, whether either of us wills it or not. The "
 "orcs have come down from the north like a flood; if we squabble among "
 "ourselves they will feast on our discord."
 msgstr ""
-"Nuestros problemas serán también los vuestros, tanto si lo queremos como si "
+"Nuestros problemas serán también los vuestros, tanto si lo queréis como si "
 "no. Los orcos han llegado desde el norte como una inundación; si discutimos "
 "entre nosotros, se aprovecharán de nuestra discordia."
 
@@ -1158,7 +1151,7 @@ msgstr ""
 msgid ""
 "Yes, go, Kalenz, I’ll guard the Ka’lian till our army returns from the front."
 msgstr ""
-"Si, iros Kalenz, yo protegeré al Ka’lian hasta que nuestro ejercito regrese "
+"Si, iros, Kalenz, yo protegeré al Ka’lian hasta que nuestro ejército regrese "
 "del frente de batalla."
 
 #. [scenario]: id=04_The_Elvish_Treasury
@@ -5148,7 +5141,7 @@ msgid ""
 "As Landar had wiped out the Elvish Council, Kalenz was unanimously chosen as "
 "High Lord of the Elves. North and South Elves swore allegiance to him."
 msgstr ""
-"Como Landar haba eliminado al consejo élfico; por unanimidad, Kalenz fue "
+"Como Landar había eliminado al consejo élfico; por unanimidad, Kalenz fue "
 "elegido «Alto Señor de los Elfos». Tanto los elfos del sur como los del "
 "norte le juraron lealtad."
 
@@ -5205,7 +5198,7 @@ msgstr ""
 "Aquagar se había cumplido; con su vida prolongada por el poder del brebaje "
 "de Crelanu, Kalenz no sólo sobrevivió a sus amados, sino también a sus "
 "hijos. Alejado de su gente debido a su mortalidad, huyendo del reflejo en "
-"sus ojos de aquellos a quienes haba perdido, abandonó su hogar y vagó "
+"sus ojos de aquellos a quienes había perdido, abandonó su hogar y vagó "
 "durante muchos años a través del Gran Continente. Con frecuencia aparecía de "
 "improviso en algunos lugares en épocas en las que su gente estaba en graves "
 "aprietos, y los ayudaba con sabiduría, o con magia, o con su brillante y "
