--- a/po/wesnoth-manpages/es.po
+++ b/po/wesnoth-manpages/es.po
@@ -10,8 +10,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
-"POT-Creation-Date: 2019-01-21 21:30+0300\n"
-"PO-Revision-Date: 2018-09-16 15:46+0200\n"
+"POT-Creation-Date: 2019-02-24 00:45+0300\n"
+"PO-Revision-Date: 2019-03-26 11:23+0100\n"
 "Last-Translator: Pepe <donpepe1963@gmail.com>\n"
 "Language-Team: Wesnoth\n"
 "Language: es\n"
@@ -127,10 +127,9 @@ msgstr ""
 
 #. type: TP
 #: doc/man/wesnoth.6:49
-#, fuzzy, no-wrap
-#| msgid "B<--bunzip>I<\\ infile.bz2>"
+#, no-wrap
 msgid "B<--bunzip2>I<\\ infile.bz2>"
-msgstr "B<--bunzip>I<\\ archivo_de_entrada.bz2>"
+msgstr "B<--bunzip2>I<\\ archivo_de_entrada.bz2>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:55
@@ -143,10 +142,9 @@ msgstr ""
 
 #. type: TP
 #: doc/man/wesnoth.6:55
-#, fuzzy, no-wrap
-#| msgid "B<--bzip>I<\\ infile>"
+#, no-wrap
 msgid "B<--bzip2>I<\\ infile>"
-msgstr "B<--bzip>I<\\ archivo_de_entrada>"
+msgstr "B<--bzip2>I<\\ archivo_de_entrada>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:61
@@ -206,50 +204,47 @@ msgstr ""
 #: doc/man/wesnoth.6:73
 #, no-wrap
 msgid "B<--campaign-skip-story>"
-msgstr ""
+msgstr "B<--campaign-skip-story>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:78
 msgid "Skip [story] screens and dialog through the end of the B<start> event."
 msgstr ""
+"Omite las pantallas de [story] y los diálogos hasta el final del evento "
+"B<start>."
 
 #. type: TP
 #: doc/man/wesnoth.6:78
-#, fuzzy, no-wrap
-#| msgid "B<--log-strict>"
+#, no-wrap
 msgid "B<--clock>"
-msgstr "B<--log-strict>"
+msgstr "B<--clock>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:81
 msgid "Adds the option to show a clock for testing the drawing timer."
-msgstr ""
+msgstr "Añade la opción de mostrar un reloj para probar el tiempo de trazado."
 
 #. type: TP
 #: doc/man/wesnoth.6:81
-#, fuzzy, no-wrap
-#| msgid "B<--userconfig-dir>I<\\ name>"
+#, no-wrap
 msgid "B<--config-dir>I<\\ name>"
-msgstr "B<--userconfig-dir>I<\\ nombre>"
+msgstr "B<--config-dir>I<\\ nombre>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:85
 msgid "Deprecated, use B<--userdata-dir>."
-msgstr ""
+msgstr "Obsoleto, utilice B<--userdata-dir>."
 
 #. type: TP
 #: doc/man/wesnoth.6:85
-#, fuzzy, no-wrap
-#| msgid "B<--userconfig-path>"
+#, no-wrap
 msgid "B<--config-path>"
-msgstr "B<--userconfig-path>"
+msgstr "B<--config-path>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:89
-#, fuzzy
-#| msgid "B<--userdata-path>"
 msgid "Deprecated, use B<--userdata-path>."
-msgstr "B<--userdata-path>"
+msgstr "Obsoleto, utilice B<--userdata-path>."
 
 #. type: TP
 #: doc/man/wesnoth.6:89
@@ -303,15 +298,14 @@ msgstr ""
 
 #. type: TP
 #: doc/man/wesnoth.6:103
-#, fuzzy, no-wrap
-#| msgid "B<-d, --debug>"
+#, no-wrap
 msgid "B<--debug-lua>"
-msgstr "B<-d, --debug>"
+msgstr "B<--debug-lua>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:106
 msgid "enables some Lua debugging mechanisms"
-msgstr ""
+msgstr "habilita algunos mecanismos de depuración de Lua"
 
 #. type: TP
 #: doc/man/wesnoth.6:106
@@ -321,16 +315,12 @@ msgstr "B<-e[>I<file>B<],\\ --editor[>I<=file>B<]>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:113
-#, fuzzy
-#| msgid ""
-#| "start the in-game map editor directly. If I<file> is specified, "
-#| "equivalent to B<-l --load>"
 msgid ""
 "start the in-game map editor directly. If I<file> is specified, equivalent "
 "to B<-l> B<--load>."
 msgstr ""
-"inicia directamente con el editor de mapas del juego. Si I<archivo> es "
-"especificado, equivale a B<-l --load>"
+"inicia directamente el editor de mapas del juego. Si I<archivo> es "
+"especificado, equivale a B<-l> B<--load>."
 
 #. type: TP
 #: doc/man/wesnoth.6:113
@@ -509,16 +499,12 @@ msgstr "B<--max-fps>I<\\ fps>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:189
-#, fuzzy
-#| msgid ""
-#| "the number of frames per second the game can show, the value should be "
-#| "between I<1> and I<1000>, the default is the monitor's refresh rate."
 msgid ""
 "the number of frames per second the game can show, the value should be "
 "between B<1> and B<1000>, the default is the monitor's refresh rate."
 msgstr ""
 "el número de fotogramas por segundo que el juego puede mostrar, el valor "
-"debería estar entre I<1> y I<1000>, por omisión es índice de refresco del "
+"debería estar entre B<1> y B<1000>, por omisión es índice de refresco del "
 "monitor."
 
 #. type: TP
@@ -549,10 +535,9 @@ msgstr "carga los escenarios de prueba multijugador."
 
 #. type: TP
 #: doc/man/wesnoth.6:198
-#, fuzzy, no-wrap
-#| msgid "B<--no-delay>"
+#, no-wrap
 msgid "B<--new-widgets>"
-msgstr "B<--no-delay>"
+msgstr "B<--new-widgets>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:201
@@ -561,13 +546,16 @@ msgid ""
 "experimental, don't fill bug reports since most are known. Parts of the "
 "library are deemed stable and will work without this switch."
 msgstr ""
+"hay una nueva extensión de herramientas WIP, esta opción la habilita. Esto "
+"es muy experimental, no haga informes de errores hasta que se conozca la "
+"mayoría de ellos. Partes de la biblioteca se consideran estables y "
+"funcionarán sin este conmutador."
 
 #. type: TP
 #: doc/man/wesnoth.6:201
-#, fuzzy, no-wrap
-#| msgid "B<--no-delay>"
+#, no-wrap
 msgid "B<--nodelay>"
-msgstr "B<--no-delay>"
+msgstr "B<--nodelay>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:205
@@ -669,10 +657,9 @@ msgstr ""
 
 #. type: TP
 #: doc/man/wesnoth.6:234
-#, fuzzy, no-wrap
-#| msgid "B<--gzip>I<\\ infile>"
+#, no-wrap
 msgid "B<--plugin>I<\\ script>"
-msgstr "B<--gzip>I<\\ archivo_de_entrada>"
+msgstr "B<--plugin>I<\\ script>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:241
@@ -681,6 +668,10 @@ msgid ""
 "B<--script>, but Lua file should return a function which will be run as a "
 "coroutine and periodically woken up with updates."
 msgstr ""
+"(experimental) carga un I<script> que define una extensión para Wesnoth. "
+"Similar a B<--script>, pero el fichero Lua debería devolver una función que "
+"se ejecutará como una corutina que se activará periódicamente con "
+"actualizaciones."
 
 #. type: TP
 #: doc/man/wesnoth.6:241
@@ -691,16 +682,6 @@ msgstr "B<-p,\\ --preprocess>I<\\ source-file/folder>B<\\ >I<target-directory>"
 # El preprocesador que lo preprocese, buen preprocesador será.
 #. type: Plain text
 #: doc/man/wesnoth.6:251
-#, fuzzy
-#| msgid ""
-#| "preprocesses a specified file/folder. For each file(s) a plain .cfg file "
-#| "and a processed .cfg file will be written in specified target directory. "
-#| "If a folder is specified, it will be preprocessed recursively based on "
-#| "the known preprocessor rules. The common macros from the \"data/core/"
-#| "macros\" directory will be preprocessed before the specified resources.  "
-#| "Example: B<-p ~/wesnoth/data/campaigns/tutorial ~/result.> For details "
-#| "regarding the preprocessor visit: https://wiki.wesnoth.org/"
-#| "PreprocessorRef#Command-line_preprocessor"
 msgid ""
 "preprocesses a specified file/folder. For each file(s) a plain .cfg file and "
 "a processed .cfg file will be written in specified target directory. If a "
@@ -718,7 +699,7 @@ msgstr ""
 "macros comunes del directorio «data/core/macros» serán preprocesadas antes "
 "que los recursos especificados. Ejemplo:  B<-p ~/wesnoth/data/campaigns/"
 "tutorial ~/result.> Para más detalles en relación con el preprocesador "
-"visite: https://wiki.wesnoth.org/PreprocessorRef#Command-line_preprocessor"
+"visite: https://wiki.wesnoth.org/PreprocessorRef#Command-line_preprocessor."
 
 #. type: TP
 #: doc/man/wesnoth.6:251
@@ -775,63 +756,58 @@ msgstr ""
 
 #. type: TP
 #: doc/man/wesnoth.6:276
-#, fuzzy, no-wrap
-#| msgid "B<--fps>"
+#, no-wrap
 msgid "B<--proxy>"
-msgstr "B<--fps>"
+msgstr "B<--proxy>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:279
 msgid "enables usage of proxy for network connections."
-msgstr ""
+msgstr "habilita el uso de proxy para conexiones de red."
 
 #. type: TP
 #: doc/man/wesnoth.6:279
-#, fuzzy, no-wrap
-#| msgid "B<--core>I<\\ id_core>"
+#, no-wrap
 msgid "B<--proxy-address>I<\\ address>"
-msgstr "B<--core>I<\\ id_modulo>"
+msgstr "B<--proxy-address>I<\\ address>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:284
 msgid "specifies I<address> of the proxy."
-msgstr ""
+msgstr "especifica la  I<address> para el proxy."
 
 #. type: TP
 #: doc/man/wesnoth.6:284
-#, fuzzy, no-wrap
-#| msgid "B<-p\\ >I<port>B<,\\ --port>I<\\ port>"
+#, no-wrap
 msgid "B<--proxy-port>I<\\ port>"
-msgstr "B<-p\\ >I<puerto>B<,\\ --port>I<\\ puerto>"
+msgstr "B<--proxy-port>I<\\ port>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:289
 msgid "specifies I<port> of the proxy."
-msgstr ""
+msgstr "especifica el  I<port> para el proxy."
 
 #. type: TP
 #: doc/man/wesnoth.6:289
-#, fuzzy, no-wrap
-#| msgid "B<--username>I<\\ username>"
+#, no-wrap
 msgid "B<--proxy-user>I<\\ username>"
-msgstr "B<--username>I<\\ username>"
+msgstr "B<--proxy-user>I<\\ username>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:294
 msgid "specifies I<username> to log in to the proxy."
-msgstr ""
+msgstr "especifica el I<username> para iniciar sesión en el proxy."
 
 #. type: TP
 #: doc/man/wesnoth.6:294
-#, fuzzy, no-wrap
-#| msgid "B<--password>I<\\ password>"
+#, no-wrap
 msgid "B<--proxy-password>I<\\ password>"
-msgstr "B<--password>I<\\ password>"
+msgstr "B<--proxy-password>I<\\ password>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:299
 msgid "specifies I<password> to log in to the proxy."
-msgstr ""
+msgstr "especifica la I<password> para iniciar sesión en el proxy."
 
 #. type: TP
 #: doc/man/wesnoth.6:299
@@ -841,10 +817,8 @@ msgstr "B<-r\\ >I<X>B<x>I<Y>B<,\\ --resolution\\ >I<X>B<x>I<Y>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:304
-#, fuzzy
-#| msgid "sets the screen resolution. Example: B<-r 800x600>"
 msgid "sets the screen resolution. Example: B<-r> B<800x600>."
-msgstr "establece la resolución de la pantalla. Por ejemplo: B<-r 800x600>"
+msgstr "establece la resolución de la pantalla. Por ejemplo: B<-r> B<800x600>."
 
 #. type: TP
 #: doc/man/wesnoth.6:304
@@ -854,22 +828,15 @@ msgstr "B<--render-image>I<\\ image>B<\\ >I<output>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:307
-#, fuzzy
-#| msgid ""
-#| "takes a valid wesnoth 'image path string' with image path functions, and "
-#| "outputs to a .png file. Outputs to a windows .bmp file if the filename "
-#| "ends with .bmp or if libpng is not available. Image path functions are "
-#| "documented at https://wiki.wesnoth.org/ImagePathFunctionWML."
 msgid ""
 "takes a valid wesnoth 'image path string' with image path functions, and "
 "outputs to a .png file. Image path functions are documented at https://wiki."
 "wesnoth.org/ImagePathFunctionWML."
 msgstr ""
-"toma una 'cadena de dirección de imágen' válida de wesnoth  con funciones de "
-"direccionado de imágen, y genera un archivo .png. Genera un archivo .bmp de "
-"windows si el nombre de archivo termina con .bmp o si libpng no está "
-"disponible. Las funciones de direccionado de imágenes están documentadas en "
-"https://wiki.wesnoth.org/ImagePathFunctionWML."
+"toma una 'cadena de dirección de imágen' válida de wesnoth con funciones de "
+"direccionado de imágen, y genera un archivo .png. Las funciones de "
+"direccionado de imágenes están documentadas en https://wiki.wesnoth.org/"
+"ImagePathFunctionWML."
 
 #. type: TP
 #: doc/man/wesnoth.6:307
@@ -888,23 +855,18 @@ msgstr ""
 
 #. type: TP
 #: doc/man/wesnoth.6:310
-#, fuzzy, no-wrap
-#| msgid "B<--rng-seed>I<\\ seed>"
+#, no-wrap
 msgid "B<--rng-seed>I<\\ number>"
-msgstr "B<--rng-seed>I<\\ seed>"
+msgstr "B<--rng-seed>I<\\ number>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:317
-#, fuzzy
-#| msgid ""
-#| "seeds the random number generator with number E<lt>argE<gt>. Example: B<--"
-#| "rng-seed 0>"
 msgid ""
 "seeds the random number generator with I<number>.  Example: B<--rng-seed> "
 "B<0>."
 msgstr ""
-"inicializa el generador de números aleatorios con el número E<lt>argE<gt>.  "
-"Ejemplo: B<--rng-seed 0>"
+"inicializa el generador de números aleatorios con I<number>.  Ejemplo: B<--"
+"rng-seed> B<0>."
 
 #. type: TP
 #: doc/man/wesnoth.6:317
@@ -922,15 +884,15 @@ msgstr ""
 
 #. type: TP
 #: doc/man/wesnoth.6:324
-#, fuzzy, no-wrap
-#| msgid "B<--bzip>I<\\ infile>"
+#, no-wrap
 msgid "B<--script>I<\\ file>"
-msgstr "B<--bzip>I<\\ archivo_de_entrada>"
+msgstr "B<--script>I<\\ file>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:329
 msgid "(experimental)  I<file> containing a Lua script to control the client."
 msgstr ""
+"(experimental)  I<file> contiene un script Lua para controlar el cliente."
 
 #. type: TP
 #: doc/man/wesnoth.6:329
@@ -940,17 +902,13 @@ msgstr "B<-s[>I<host>B<],\\ --server[>I<=host>B<]>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:334
-#, fuzzy
-#| msgid ""
-#| "connects to the specified host if any, otherwise connect to the first "
-#| "server in preferences. Example: B<--server server.wesnoth.org>"
 msgid ""
 "connects to the specified host if any, otherwise connect to the first server "
 "in preferences. Example: B<--server> B<server.wesnoth.org>."
 msgstr ""
-"se conecta a la máquina especificada si la hay, de otro modo se conecta al "
-"primer servidor seleccionado en las preferencias. Ejemplo: B<--server server."
-"wesnoth.org>"
+"se conecta al servidor especificado si lo hay, de otro modo se conecta al "
+"primer servidor seleccionado en las preferencias. Ejemplo: B<--server> "
+"B<server.wesnoth.org>."
 
 #. type: TP
 #: doc/man/wesnoth.6:334
@@ -1026,10 +984,9 @@ msgstr ""
 
 #. type: TP
 #: doc/man/wesnoth.6:363
-#, fuzzy, no-wrap
-#| msgid "B<--userconfig-path>"
+#, no-wrap
 msgid "B<--unsafe-scripts>"
-msgstr "B<--userconfig-path>"
+msgstr "B<--unsafe-scripts>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:368
@@ -1038,6 +995,10 @@ msgid ""
 "arbitrary packages. Do not do this with untrusted scripts! This action gives "
 "lua the same permissions as the wesnoth executable."
 msgstr ""
+"pone al paquete B<package> como disponible para los scripts de lua, de este "
+"modo podrán cargar paquetes arbitrarios. ¡No lo haga con scripts no "
+"confiables! Esta acción da a los lua los mismos permisos que el ejecutable "
+"de wesnoth."
 
 #. type: TP
 #: doc/man/wesnoth.6:368
@@ -1188,10 +1149,9 @@ msgstr ""
 
 #. type: TP
 #: doc/man/wesnoth.6:421
-#, fuzzy, no-wrap
-#| msgid "B<--ai_config>I<\\ number>B<:>I<value>"
+#, no-wrap
 msgid "B<--ai-config>I<\\ number>B<:>I<value>"
-msgstr "B<--ai_config>I<\\ number>B<:>I<value>"
+msgstr "B<--ai-config>I<\\ number>B<:>I<value>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:424
@@ -1284,15 +1244,14 @@ msgstr ""
 
 #. type: TP
 #: doc/man/wesnoth.6:454
-#, fuzzy, no-wrap
-#| msgid "B<--era>I<\\ value>"
+#, no-wrap
 msgid "B<--label>I<\\ label>"
-msgstr "B<--era>I<\\ value>"
+msgstr "B<--label>I<\\ label>"
 
 #. type: Plain text
 #: doc/man/wesnoth.6:459
 msgid "sets the I<label> for AIs."
-msgstr ""
+msgstr "configura la I<label> para IAs."
 
 #. type: TP
 #: doc/man/wesnoth.6:459
@@ -1487,10 +1446,8 @@ msgstr "VÉASE TAMBIÉN"
 #.  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
 #. type: Plain text
 #: doc/man/wesnothd.6:15
-#, fuzzy
-#| msgid "B<wesnothd>(6)."
 msgid "B<wesnothd>(6)"
-msgstr "B<wesnothd>(6)."
+msgstr "B<wesnothd>(6)"
 
 #. type: TH
 #: doc/man/wesnothd.6:16
@@ -2292,10 +2249,8 @@ msgstr ""
 
 #. type: Plain text
 #: doc/man/wesnothd.6:286
-#, fuzzy
-#| msgid "B<wesnoth>(6)."
 msgid "B<wesnoth>(6)"
-msgstr "B<wesnoth>(6)."
+msgstr "B<wesnoth>(6)"
 
 #~ msgid "B<--path>"
 #~ msgstr "B<--path>"
