--- a/po/wesnoth-sof/es.po
+++ b/po/wesnoth-sof/es.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: 2018-09-16 16:52+0200\n"
+"PO-Revision-Date: 2019-03-26 13:29+0100\n"
 "Last-Translator: Pepe <donpepe1963@gmail.com>\n"
 "Language-Team: Wesnoth\n"
 "Language: es\n"
@@ -87,10 +87,8 @@ msgstr ""
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:34
-#, fuzzy
-#| msgid "(Expert level, 9 scenarios.)"
 msgid "(Hard level, 9 scenarios.)"
-msgstr "(Nivel experto, 9 escenarios)"
+msgstr "(Nivel experto, 9 escenarios.)"
 
 #. [about]
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:39
@@ -1254,12 +1252,6 @@ msgstr "Monstruos"
 
 #. [part]
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:40
-#, fuzzy
-#| msgid ""
-#| "The journey to the far northern wastelands was long and perilous. For the "
-#| "tunnels were winding and treacherous, and the paths were not safe from "
-#| "orcs, or worse. Nevertheless, they did reach the northlands, and began to "
-#| "search for the runesmith named Thursagan — the sage of fire."
 msgid ""
 "The journey to the far northern wastelands was long and perilous. For the "
 "tunnels were winding and treacherous, and the paths were not safe from orcs, "
@@ -1350,16 +1342,12 @@ msgstr ""
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:224
-#, fuzzy
-#| msgid ""
-#| "Except for trolls and ogres, right? They live in the far northlands. "
-#| "They’re probably lurking around here somewhere."
 msgid ""
 "Except for trolls and ogres, right? They live in the far Northlands. They’re "
 "probably lurking around here somewhere."
 msgstr ""
 "Salvo los trols y los ogros, ¿no es cierto? Ellos viven en las lejanas "
-"tierras del norte, y probablemente se hallen al acecho por aquí, en alguna "
+"tierras del norte. Y probablemente se hallen al acecho por aquí, en alguna "
 "parte."
 
 #. [message]: speaker=Baglur
@@ -1599,10 +1587,9 @@ msgstr ""
 
 #. [message]: speaker=Baglur
 #: data/campaigns/Sceptre_of_Fire/scenarios/3t_The_Council_Regathers.cfg:135
-#, fuzzy
-#| msgid "Yes, we did. And that is Krawg, who helped us in the northlands."
 msgid "Yes, we did. And that is Krawg, who helped us in the Northlands."
-msgstr "Sí, lo logramos. Y él es Krawg. Nos ayudó en las tierras del norte."
+msgstr ""
+"Sí, lo logramos. Y él es Krawg, el cual nos ayudó en las tierras del norte."
 
 #. [message]: speaker=Krawg
 #. "Yeah! Me Krawg!"
@@ -2112,7 +2099,7 @@ msgid ""
 "Well... maybe... the Shorbear clan? They have good tools... yes, yes, they "
 "do..."
 msgstr ""
-"Bueno... tal vez... ¿el clan Shorbear? Ellos tienen buenas herramientas... "
+"Bueno... tal vez... ¿el clan Barbacorta? Ellos tienen buenas herramientas... "
 "sí, sí, ellos servirán..."
 
 #. [message]: speaker=Rugnur
@@ -2190,7 +2177,7 @@ msgstr "Sí señor... -   (<i>suspira</i>)"
 #. [scenario]: id=5_Hills_of_the_Shorbear_Clan
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:3
 msgid "Hills of the Shorbear Clan"
-msgstr "Las colinas del clan Shorbear"
+msgstr "Las colinas del clan Barbacorta"
 
 #. [side]: type=Dwarvish Lord, id=Glonoin
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:36
@@ -2212,27 +2199,25 @@ msgid ""
 "best in the land. And they bartered well."
 msgstr ""
 "Todos los enanos son conocidos por su amor al oro y sus corazones de piedra, "
-"y los Shorbears no eran una excepción. Se los consideraba como los artesanos "
-"de los artesanos, pues se dedicaban a fabricar herramientas; las mejores de "
-"aquellas tierras. Y sabían negociar."
+"y los Barbacorta no eran una excepción. Se los consideraba como los "
+"artesanos de los artesanos, pues se dedicaban a fabricar herramientas; las "
+"mejores de aquellas tierras. Y sabían negociar."
 
 #. [label]
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:138
 msgid "Shorbear caves"
-msgstr ""
+msgstr "Cuevas de los Barbacorta"
 
 #. [objective]: condition=win
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:146
 msgid "Defeat Glonoin, the Shorbear clan leader"
-msgstr "Derrote a Glonoin, el líder del clan Shorbear"
+msgstr "Derrote a Glonoin, el líder del clan Barbacorta"
 
 #. [objective]: condition=win
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:155
-#, fuzzy
-#| msgid ""
-#| "Have all heroes in the Shorbear caves while no enemies are in the caves"
 msgid "Have all heroes, and no enemies, in the Shorbear caves"
-msgstr "Sitúe a todos los héroes en las cuevas Shorbear sin enemigos dentro"
+msgstr ""
+"Sitúe a todos los héroes en las cuevas de los Barbacorta, sin enemigos dentro"
 
 #. [objective]: condition=lose
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:178
@@ -2244,7 +2229,7 @@ msgstr "Muerte de Durstorn"
 msgid ""
 "Here we are; the hills of the Shorbear clan. What are we here for, anyway?"
 msgstr ""
-"Ahí las tenemos, las colinas del clan Shorbear. ¿Para qué estamos aquí, "
+"Ahí las tenemos, las colinas del clan Barbacorta. ¿Para qué estamos aquí, "
 "entonces?"
 
 #. [message]: speaker=Rugnur
@@ -2253,7 +2238,7 @@ msgid ""
 "If I understand it correctly, we’re here to bargain with the Shorbears, and "
 "arrange for us to use their tools to cut the ruby."
 msgstr ""
-"Si lo he entendido bien, estamos aquí para negociar con los Shorbears, y "
+"Si lo he entendido bien, estamos aquí para negociar con los Barbacorta, y "
 "alcanzar un acuerdo que nos permita emplear sus herramientas para cortar el "
 "rubí."
 
@@ -2573,7 +2558,7 @@ msgid ""
 "And then stop any enemies from coming in here."
 msgstr ""
 "Bien, de vuelta a la batalla: necesitamos a todo el mundo dentro de las "
-"cuevas de los Shorbear. Y luego impedir la entrada de cualquier enemigo."
+"cuevas de los Barbacorta. Y luego impedir la entrada de cualquier enemigo."
 
 #. [message]: speaker=Durstorn
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:550
@@ -3062,7 +3047,7 @@ msgstr "Raesil"
 #. [message]: speaker=second_unit
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:217
 msgid "Great, now there is no need to worry about those elves anymore!"
-msgstr ""
+msgstr "¡Bien, ya no hay necesidad de preocuparse más por esos elfos!"
 
 #. [message]: role=newcomer
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:226
@@ -3070,6 +3055,8 @@ msgid ""
 "Did you really think that you could escape us? Don’t underestimate us, "
 "inferior humans!"
 msgstr ""
+"¿Realmente pensabais que podríais escapar de nosotros? ¡No nos "
+"infravaloréis, insignificantes humanos!"
 
 #. [message]: id=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:238
@@ -3077,21 +3064,23 @@ msgid ""
 "Even though my chances have grown worse, I have to fulfil my duty. I do not "
 "owe them any less!"
 msgstr ""
+"Aunque mis posibilidades han empeorado, he de cumplir con mi deber. ¡Es lo "
+"mínimo que puedo hacer!"
 
 #. [message]: id=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:263
 msgid "Oh no, more of them? And there I thought I could catch my breath…"
-msgstr ""
+msgstr "Oh no, ¿vienen más? Yo que creía que podría recuperar el aliento..."
 
 #. [message]: role=fighter
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:268
 msgid "Don’t worry sir, we’ll make it through this!"
-msgstr ""
+msgstr "No os preocupéis señor, ¡nos las arreglaremos!"
 
 #. [message]: id=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:293
 msgid "Is there no end to their numbers?"
-msgstr ""
+msgstr "¿Es que no se van a acabar nunca?"
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:358
@@ -3119,6 +3108,8 @@ msgstr ""
 msgid ""
 "You slow humans took too long, our detachment has already caught up with you!"
 msgstr ""
+"Os demorasteis demasiado, lentos humanos. ¡Nuestro destacamento ya os ha "
+"alcanzado!"
 
 #. [unit]: type=Lieutenant, id=Hadlin   # wmllint: ignore
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:543
@@ -3133,11 +3124,6 @@ msgstr "¿Quién está ahí?"
 #. [message]: speaker=Alanin
 #. dragoon = his unit type
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:565
-#, fuzzy
-#| msgid ""
-#| "I’m a dragoon, with Haldric II’s personal bodyguard. I was sent on a "
-#| "mission in the northlands, and now elvish horsemen are chasing me. I "
-#| "barely evaded them."
 msgid ""
 "I’m a dragoon, with Haldric II’s personal bodyguard. I was sent on a mission "
 "in the Northlands, and now elvish horsemen are chasing me. I barely evaded "
@@ -3145,16 +3131,11 @@ msgid ""
 msgstr ""
 "Soy un dragón de la guardia personal de Haldric II. Fui enviado a una misión "
 "en las tierras del norte, y ahora jinetes elfos me persiguen. Apenas he "
-"conseguido evadirlos."
+"conseguido eludirlos."
 
 #. [message]: speaker=Alanin
 #. cavalier = his unit type
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:572
-#, fuzzy
-#| msgid ""
-#| "I’m a dragoon, with Haldric II’s personal bodyguard. I was sent on a "
-#| "mission in the northlands, and now elvish horsemen are chasing me. I "
-#| "barely evaded them."
 msgid ""
 "I’m a cavalier, with Haldric II’s personal bodyguard. I was sent on a "
 "mission in the Northlands, and now elvish horsemen are chasing me. I barely "
@@ -3162,7 +3143,7 @@ msgid ""
 msgstr ""
 "Soy un dragón de la guardia personal de Haldric II. Fui enviado a una misión "
 "en las tierras del norte, y ahora jinetes elfos me persiguen. Apenas he "
-"conseguido evadirlos."
+"conseguido eludirlos."
 
 #. [message]: speaker=Hadlin  # wmllint: ignore
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:578
@@ -3709,10 +3690,6 @@ msgstr "¡Alto! ¿Cuál es vuestro asunto en Weldyn, capital de Wesnoth?"
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg:103
-#, fuzzy
-#| msgid ""
-#| "Stand aside. I am Alanin, of Haldric’s royal guard, and I bring news from "
-#| "the northlands."
 msgid ""
 "Stand aside. I am Alanin, of Haldric’s royal guard, and I bring news from "
 "the Northlands."
@@ -3748,10 +3725,6 @@ msgstr "Entrad, Alanin, y entregad al rey vuestro mensaje."
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg:126
-#, fuzzy
-#| msgid ""
-#| "My King, fifteen years ago you sent me on a mission into the northlands. "
-#| "I have returned. What do you wish to know of my mission?"
 msgid ""
 "My King, fifteen years ago you sent me on a mission into the Northlands. I "
 "have returned. What do you wish to know of my mission?"
