--- a/po/wesnoth-trow/es.po
+++ b/po/wesnoth-trow/es.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
-"PO-Revision-Date: 2018-04-01 21:48+0200\n"
+"PO-Revision-Date: 2019-03-27 12:01+0100\n"
 "Last-Translator: Pepe <donpepe1963@gmail.com>\n"
 "Language-Team: Spanish <kde-i18n-doc@kde.org>\n"
 "Language: es\n"
@@ -24,7 +24,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: Poedit 2.0.6\n"
 
 #. [scenario]: id=22_The_Rise_of_Wesnoth
 #. [campaign]: id=The_Rise_of_Wesnoth
@@ -83,10 +83,8 @@ msgstr ""
 
 #. [campaign]: id=The_Rise_of_Wesnoth
 #: data/campaigns/The_Rise_Of_Wesnoth/_main.cfg:26
-#, fuzzy
-#| msgid "(Expert level, 24 scenarios.)"
 msgid "(Hard level, 24 scenarios.)"
-msgstr "(Nivel experto, 24 escenarios)."
+msgstr "(Nivel experto, 24 escenarios.)"
 
 #. [about]
 #: data/campaigns/The_Rise_Of_Wesnoth/_main.cfg:29
@@ -336,15 +334,11 @@ msgstr ""
 
 #. [message]: speaker=King Eldaric IV
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/01_A_Summer_of_Storms.cfg:153
-#, fuzzy
-#| msgid ""
-#| "It looks like a Wesfolk rabble have seized the Northern Keep! Prepare for "
-#| "battle, Haldric!"
 msgid ""
 "It looks like some Wesfolk rabble have seized the Northern Keep! Prepare for "
 "battle, Haldric!"
 msgstr ""
-"¡Parece que la chusma occitana domina la Torre norte! ¡Prepárate para la "
+"¡Parece que la chusma occitana asedia la Torre norte! ¡Prepárate para la "
 "Batalla, Haldric!"
 
 #. [message]: speaker=Prince Haldric
@@ -497,12 +491,9 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/01_A_Summer_of_Storms.cfg:254
-#, fuzzy
-#| msgid ""
-#| "My forces are defeated, under your customs of surrender I will go now."
 msgid "My forces are defeated. Under your customs of surrender, I will go now."
 msgstr ""
-"Mis fuerzas han sido derrotadas, así que siguiendo vuestras condiciones de "
+"Mis fuerzas han sido derrotadas. Así que siguiendo vuestras tradiciones de "
 "rendición, me iré ahora."
 
 #. [message]: speaker=King Eldaric IV
@@ -730,10 +721,8 @@ msgstr ""
 
 #. [message]: speaker=Wesfolk Leader
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/02_The_Fall.cfg:298
-#, fuzzy
-#| msgid "Let there be peace between us, our survival depends on it."
 msgid "Let there be peace between us. Our survival depends on it."
-msgstr "Debemos llevarnos bien, nuestra supervivencia depende de ello."
+msgstr "Debemos llevarnos bien. Nuestra supervivencia depende de ello."
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/02_The_Fall.cfg:306
@@ -932,10 +921,8 @@ msgstr ""
 
 #. [message]: speaker=Tan-Schmog
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/03_A_Harrowing_Escape.cfg:147
-#, fuzzy
-#| msgid "You won’t get much further boy. Grrrr!"
 msgid "You won’t get much further, boy. Grrrr!"
-msgstr "¡No llegarás lejos, chico! ¡Grrrr!"
+msgstr "No llegarás muy lejos, chico. ¡Grrrr!"
 
 #. [message]: speaker=unit
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/03_A_Harrowing_Escape.cfg:161
@@ -1756,10 +1743,8 @@ msgstr ""
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/05_The_Oldwood.cfg:239
-#, fuzzy
-#| msgid "We will help. "
 msgid "We will help."
-msgstr "Os ayudaremos. "
+msgstr "Os ayudaremos."
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/05_The_Oldwood.cfg:239
@@ -2404,7 +2389,7 @@ msgstr ""
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/07_Return_to_Oldwood.cfg:303
 msgid "Young prince, it is time to go! We must flee before the winter snow!"
 msgstr ""
-"Joven príncipe, es hora de partir. ¡Debemos partir antes de que lleguen las "
+"Joven príncipe, es hora de partir. ¡Debemos hacerlo antes de que lleguen las "
 "primeras nieves!"
 
 #. [message]: speaker=Prince Haldric
@@ -2941,7 +2926,7 @@ msgstr "Señor Liche Caror"
 #. [side]
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/09_Fallen_Lich_Point.cfg:137
 msgid "Yetis"
-msgstr ""
+msgstr "Yetis"
 
 #. [objective]: condition=win
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/09_Fallen_Lich_Point.cfg:193
@@ -5370,16 +5355,12 @@ msgstr "¿Sabe alguien realmente algo sobre troles?"
 # No son verdes, son grises.
 #. [message]: speaker=Burin the Lost
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/17c_Troll_Hole.cfg:272
-#, fuzzy
-#| msgid ""
-#| "I indeed do. They are green, and mean, and will try to crush you like a "
-#| "bug. They heal very quickly."
 msgid ""
 "I indeed do. They are ugly and mean, and will try to crush you like a bug. "
 "They heal very quickly."
 msgstr ""
-"Yo mismo. Son grises, y malvados, e intentarán aplastaros como a insectos. "
-"Se curan rápidamente de sus heridas."
+"Yo mismo. Son feos y malvados, e intentarán aplastaros como a un insecto. "
+"Sanan rápidamente de sus heridas."
 
 #. [message]: speaker=Lady Jessene
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/17c_Troll_Hole.cfg:277
@@ -7170,17 +7151,12 @@ msgstr "Luchador noble"
 
 #. [unit_type]: id=Noble Fighter, race=human
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Noble_Fighter.cfg:18
-#, fuzzy
-#| msgid ""
-#| "Young and brash, Fighters fight with a sword, and are vulnerable to "
-#| "ranged attacks from enemies. However they have the potential to become "
-#| "great Commanders one day."
 msgid ""
 "Young and brash, Fighters fight with a sword, and are vulnerable to ranged "
 "attacks from enemies. However, they have the potential to become great "
 "Commanders one day."
 msgstr ""
-"Jóvenes e inexpertos, los luchadores combaten usando la espada, y son "
+"Jóvenes e inexpertos, los luchadores combaten usando la espada y son "
 "vulnerables a los ataques a distancia enemigos. Sin embargo, tienen el "
 "potencial para convertirse en grandes comandantes algún día."
 
