--- a/po/wesnoth-aoi/es.po
+++ b/po/wesnoth-aoi/es.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:09 UTC\n"
-"PO-Revision-Date: 2018-09-16 18:32+0200\n"
+"PO-Revision-Date: 2019-03-26 11:36+0100\n"
 "Last-Translator: Pepe <donpepe1963@gmail.com>\n"
 "Language-Team: Spanish <kde-i18n-doc@kde.org>\n"
 "Language: es\n"
@@ -50,10 +50,8 @@ msgstr ""
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:20
-#, fuzzy
-#| msgid "(Novice level, 7 scenarios.)"
 msgid "(Rookie level, 7 scenarios.)"
-msgstr "(Nivel principiante, 7 escenarios)"
+msgstr "(Nivel principiante, 7 escenarios.)"
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:22
@@ -272,13 +270,6 @@ msgstr ""
 
 #. [message]: speaker=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:154
-#, fuzzy
-#| msgid ""
-#| "So the grim tales of them prove true. They must not be allowed to "
-#| "continue; we must banish this blight from our forests. I shall marshal "
-#| "the wardens and drive them off. And the Council needs to hear of this; "
-#| "take the message and return with reinforcements, there might be more of "
-#| "them."
 msgid ""
 "So the grim tales of them prove true. They must not be allowed to continue; "
 "we must banish this blight from our forests. I shall marshal the wardens and "
@@ -287,9 +278,9 @@ msgid ""
 msgstr ""
 "Así que los cuentos aterradores resultaron ser verdad. No se les debe "
 "permitir continuar; debemos erradicar esta plaga de nuestros bosques. He de "
-"comandar a los guardias para expulsarlos. Mientras tanto, el Consejo debe "
-"ser informado acerca de esto, enviadles las nuevas y regresad con refuerzos, "
-"ya que podría haber más orcos."
+"comandar a los guardas para expulsarlos. Mientras tanto, el Consejo debe ser "
+"informado acerca de esto, enviadles las nuevas y regresad con refuerzos, ya "
+"que podría haber más orcos."
 
 #. [message]: speaker=Lomarfel
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:159
@@ -313,6 +304,10 @@ msgid ""
 "me that they are safe, but if we should embark on a campaign then we will "
 "surely need them alongside us in the battles ahead."
 msgstr ""
+"Mi señor, ninguna de nuestras sanadoras tiene experiencia en el campo de "
+"batalla. Me alegra saber que se encuentran a salvo, pero si hemos de "
+"embarcarnos en una campaña es seguro que las necesitaremos a nuestro lado en "
+"las próximas batallas."
 
 #. [message]: race=elf
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:214
@@ -321,6 +316,10 @@ msgid ""
 "pleases me that they are safe, but if we should embark on a campaign then we "
 "will surely need them alongside us in the battles ahead."
 msgstr ""
+"Mi señor, ninguna de nuestras sanadoras tiene experiencia en el campo de "
+"batalla. Me alegra saber que se encuentran a salvo, pero si hemos de "
+"embarcarnos en una campaña es seguro que las necesitaremos a nuestro lado en "
+"las próximas batallas."
 
 #. [message]: race=elf
 #. the player has recruited some Shamans but has lost all them (or managed to level a Sorceress)
@@ -331,6 +330,10 @@ msgid ""
 "on a campaign then we will surely need them alongside us in the battles "
 "ahead."
 msgstr ""
+"Mi señor, ninguna de nuestras sanadoras tiene experiencia en el campo de "
+"batalla. Me duele tener que sugerir que alguien más ha de ponerse en "
+"peligro, pero si hemos de embarcarnos en una campaña es seguro que las "
+"necesitaremos a nuestro lado en las próximas batallas."
 
 #. [message]: race=elf
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:229
@@ -340,6 +343,10 @@ msgid ""
 "should embark on a campaign then we will surely need them alongside us in "
 "the battles ahead."
 msgstr ""
+"Mi señor, ninguna de nuestras sanadoras tiene experiencia en el campo de "
+"batalla. Me duele tener que sugerir que alguien más ha de ponerse en "
+"peligro, pero si hemos de embarcarnos en una campaña es seguro que las "
+"necesitaremos a nuestro lado en las próximas batallas."
 
 #. [message]: race=elf
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:244
