--- a/po/wesnoth-l/es.po
+++ b/po/wesnoth-l/es.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:09 UTC\n"
-"PO-Revision-Date: 2018-09-16 17:39+0200\n"
+"PO-Revision-Date: 2019-03-26 12:18+0100\n"
 "Last-Translator: Pepe <donpepe1963@gmail.com>\n"
 "Language-Team: Wesnoth\n"
 "Language: es\n"
@@ -80,10 +80,8 @@ msgstr ""
 
 #. [campaign]: id=Liberty
 #: data/campaigns/Liberty/_main.cfg:28
-#, fuzzy
-#| msgid "(Intermediate level, 8 scenarios.)"
 msgid "(Novice level, 8 scenarios.)"
-msgstr "(Nivel Intermedio, 8 escenarios.)"
+msgstr "(Nivel principiante, 8 escenarios.)"
 
 #. [about]
 #: data/campaigns/Liberty/_main.cfg:31
@@ -117,12 +115,6 @@ msgstr "Dallben"
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:22
-#, fuzzy
-#| msgid ""
-#| "In the Era of Turmoil, during the reign of King Garard II, the border "
-#| "towns of Delwyn and Dallben in the province of Annuvin grew increasingly "
-#| "dissatisfied with the King’s rule. Being preoccupied with the great wars, "
-#| "the King was unable to send adequate forces to protect the frontier."
 msgid ""
 "In the Era of Turmoil, during the reign of King Garard II, the border towns "
 "of Delwyn and Dallben in the Province of Annuvin grew increasingly "
@@ -132,8 +124,8 @@ msgstr ""
 "En la Era de la Agitación, durante el reinado del Rey Garard II, las "
 "ciudades fronterizas de Delwyn y Dallben, en la provincia de Annuvin, se "
 "sentían cada vez más descontentas con el gobierno del rey. Absorto por las "
-"grandes guerras, el rey no fue capaz de proporcionar las fuerzas suficientes "
-"para proteger su frontera."
+"grandes guerras, el rey fue incapaz de proporcionar tropas suficientes para "
+"proteger la frontera."
 
 # Aunque "como de batalla" no parezca en su sitio, se supone que las habilides que aprenden son de supervivencia, y de "sobrevivir a los arcos invasores", lo cual no queda claro sin "como de batalla".
 #. [part]
@@ -765,12 +757,6 @@ msgstr ""
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:188
-#, fuzzy
-#| msgid ""
-#| "You do not understand. We attacked a Wesnoth army patrol. Not only that, "
-#| "the leader was no man I had ever seen in Annuvin province before. Never "
-#| "has one been sent out here as a patrol captain who was so ruthless and "
-#| "cruel."
 msgid ""
 "You do not understand. We attacked a Wesnoth army patrol. Not only that, the "
 "leader was no man I had ever seen in Annuvin Province before. Never has one "
@@ -778,8 +764,8 @@ msgid ""
 msgstr ""
 "No lo entiendes. Hemos atacado a una patrulla del ejército Wesnoth. No sólo "
 "eso, el líder no era ningún hombre que haya visto alguna vez, antes, en la "
-"provincia de Annuvin. Nunca ha sido enviado aquí un capitán de patrulla que "
-"fuera tan cruel y despiadado."
+"provincia de Annuvin. Nunca había sido enviado aquí un capitán de patrulla "
+"que fuera tan cruel y despiadado."
 
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:192
@@ -1032,11 +1018,6 @@ msgstr ""
 
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:207
-#, fuzzy
-#| msgid ""
-#| "What can we do then? We have brought with us many from Annuvin province "
-#| "who are willing to fight, but our families are still at home. They will "
-#| "not last long if the Queen’s patrols return."
 msgid ""
 "What can we do then? We have brought with us many from Annuvin Province who "
 "are willing to fight, but our families are still at home. They will not last "
@@ -1044,8 +1025,7 @@ msgid ""
 msgstr ""
 "¿Qué podemos hacer entonces? Hemos traído con nosotros muchos provincianos "
 "de Annuvin que están dispuestos a luchar, pero nuestras familias están "
-"todavía en casa. No aguantarán mucho tiempo si las patrullas de la Reina "
-"vuelven."
+"todavía en casa. No durarán mucho si las patrullas de la Reina vuelven."
 
 #. [message]: speaker=Lord Maddock
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:211
@@ -2306,19 +2286,14 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:811
-#, fuzzy
-#| msgid ""
-#| "After more than a week of fierce fighting, the main body of Asheviere’s "
-#| "host arrived from Weldyn. The battle was soon finished. Every last man "
-#| "from the province of Annuvin was executed."
 msgid ""
 "After more than a week of fierce fighting, the main body of Asheviere’s host "
 "arrived from Weldyn. The battle was soon finished. Every last man from the "
 "Province of Annuvin was executed."
 msgstr ""
 "Después de más de una semana de lucha feroz, el grueso de las fuerzas de "
-"Asheviere llegó desde Weldyn. La batalla fue rápidamente concluida. Hasta el "
-"último hombre de la provincia de Annuvin fue ejecutado."
+"Asheviere llegó desde Weldyn. La batalla duró poco. Hasta el último hombre "
+"de la provincia de Annuvin fue ejecutado."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:841
