--- a/po/wesnoth-multiplayer/es.po
+++ b/po/wesnoth-multiplayer/es.po
@@ -20,7 +20,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth 1.13\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
-"PO-Revision-Date: 2018-09-16 18:45+0200\n"
+"PO-Revision-Date: 2019-03-22 14:06+0100\n"
 "Last-Translator: Pepe <donpepe1963@gmail.com>\n"
 "Language-Team: Wesnoth-spanish\n"
 "Language: es\n"
@@ -807,22 +807,6 @@ msgstr "Blum Duk"
 
 #. [unit]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:147
-#, fuzzy
-#| msgid ""
-#| "Blum Duk was renowned among his goblin clan for having tamed one of the "
-#| "Dire Wolves of the mountains, and he had the courage to match. His "
-#| "leadership and skills alone were what kept the area’s goblins alive "
-#| "despite human and elvish menaces. Rumor had it that his wolf had slain "
-#| "fifty men and a hundred Elves.\n"
-#| "Thus, when he heard of the awful monster that was inhabiting the area, it "
-#| "was only natural that he ride out alone to face it. All the other goblins "
-#| "expected him to slay the creature easily and drag back its carcass to "
-#| "feast on.\n"
-#| "He was in for quite a shock. As soon as he saw the Basilisk, Blum Duk "
-#| "cowered in fright. He tried to wheel his wolf around to run away, but it "
-#| "wouldn’t move. As the creature stalked towards him, he screamed his last "
-#| "words: Good Gog, dog, are yer legs made of stone?!\n"
-#| "(inscribed by Elvish Pillager)"
 msgid ""
 "Blum Duk was renowned among his goblin clan for having tamed one of the Dire "
 "Wolves of the mountains, and he had the courage to match. His leadership and "
@@ -842,19 +826,19 @@ msgid ""
 "(inscribed by Elvish Pillager)"
 msgstr ""
 "Blum Duk fue célebre entre su clan goblin por haber domesticado a uno de los "
-"grandes lobos de las montañas y él tenía el valor de hacerlo. Su liderazgo y "
-"habilidades fueron por sí mismas las que mantuvieron vivos a los goblins de "
-"la zona, a pesar de la amenaza humana y élfica. Se rumoreaba que su lobo "
-"había matado a cincuenta hombres y a cien elfos.\n"
+"feroces lobos de las montañas mostrando una gran valentía. Tan solo su "
+"liderazgo y habilidades fueron lo que mantuvieron vivos a los goblins de la "
+"zona, a pesar de la amenaza humana y élfica. Se rumoreaba que su lobo había "
+"matado a cincuenta hombres y a cien elfos.\n"
 "Así, cuando oyó hablar del terrible monstruo que habitaba la zona, era "
-"natural que decidiese cabalgar en solitario para enfrentarse a él. Todos los "
+"normal que decidiese cabalgar en solitario para enfrentarse a él. Todos los "
 "otros goblins esperaban que matara con facilidad a la criatura y trajera a "
 "rastras su cadáver para hacer un festín.\n"
+"\n"
 "Una gran sorpresa le esperaba. En cuanto vio al basilisco, Blum Duk se "
-"encogió de miedo. Intentó hacer que su lobo se diera la vuelta para huir, "
-"pero el lobo no se movía. En el momento en que la criatura se aproximaba a "
-"ambos, el gritaba sus últimas palabras: Buen Gog, mi perro, ¿¡¿están hechas "
-"de piedra tus patas?!?\n"
+"encogió de miedo. Intentó hacer que su lobo diera la vuelta para huir, pero "
+"este no se movió. Mientras la criatura le acechaba, gritó sus últimas "
+"palabras: Buen Gog, mi perro, ¿están hechas de piedra tus patas?\n"
 "(inscrito por Saqueador Elfo)"
 
 #. [side]
@@ -888,7 +872,7 @@ msgstr ""
 #. [side]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:162
 msgid "Turin's Monster of the Lake"
-msgstr ""
+msgstr "El monstruo del lago de Turin"
 
 #. [unit]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:165
@@ -912,7 +896,7 @@ msgstr ""
 #. [side]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:170
 msgid "The Spider"
-msgstr ""
+msgstr "La araña"
 
 #. [unit]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:173
@@ -960,23 +944,6 @@ msgstr "Bramwythl"
 
 #. [unit]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:196
-#, fuzzy
-#| msgid ""
-#| "Bramwythl the Wose was always considered a slow, taciturn fellow, even by "
-#| "other Woses. More than any other Wose, he enjoyed simply standing alone "
-#| "in the sun, arms upraised, admiring the beauty of the empty sky. Once, "
-#| "even, he confided in a fellow that his greatest wish was to be able to "
-#| "bask forever in the sun’s glory.\n"
-#| "However, not long after, the local wose community heard of the approach "
-#| "of a horrible monster, powerful enough to easily destroy the few woses "
-#| "that lived in the area. They quickly moved off (quickly for Woses, "
-#| "anyway), but Bramwythl was left behind — in their haste, no one had "
-#| "remembered to find him and tell him of the danger.\n"
-#| "He was taken quite unawares by the Basilisk, and turned to stone before "
-#| "he even recognized the beast. His petrified form still stands there "
-#| "today, warmed by the sun’s rays, under an open sky. His greatest wish has "
-#| "been granted.\n"
-#| "(inscribed by Elvish Pillager)"
 msgid ""
 "Bramwythl the Wose was always considered a slow, taciturn fellow, even by "
 "other Woses. More than any other Wose, he enjoyed simply standing alone in "
@@ -998,18 +965,20 @@ msgid ""
 msgstr ""
 "Bramwythl el wose fue considerado siempre un compañero lento y taciturno, "
 "incluso para los otros woses. Mucho más que cualquier otro wose, disfrutaba "
-"simplemente quedándose ante el sol, con los brazos en alto, admirando la "
-"belleza del cielo limpio. De hecho, una vez, confesó a un compañero que su "
-"gran deseo era disfrutar para siempre de la gloria del sol.\n"
-"Sin embargo, no mucho más tarde, la comunidad local de woses oyó del "
-"acercamiento de un horrible monstruo, tan poderoso como para destruir con "
-"facilidad a los pocos woses que vivían en la zona. Se alejaron rápidamente "
-"(rápido para los woses, de todos modos), pero a Bramwythl le dejaron atrás. "
-"En su precipitación, nadie se acordó de buscarle y avisarle del peligro.\n"
+"tan solo tomando el sol, con los brazos en alto, admirando la belleza del "
+"cielo limpio. De hecho, una vez, confesó a un compañero que su mayor deseo "
+"era poder disfrutar para siempre de la gloria del sol.\n"
+"\n"
+"Sin embargo, no mucho más tarde, la comunidad local de woses escuchó acerca "
+"de la llegada de un horrible monstruo, tan poderoso como para destruir con "
+"facilidad a los pocos woses que vivían en la zona. Se marcharon rápido "
+"(rápido para los woses, en cualquier caso), pero Bramwythl fue dejado atrás. "
+"Con las prisas, nadie se acordó de buscarle y avisarle del peligro.\n"
+"\n"
 "Fue pillado por sorpresa por el Basilisco, y convertido en piedra antes de "
-"que siquiera reconociera a la bestia. Su forma petrificada aún permanece "
-"aquí hoy, calentada por los rayos del sol, bajo el cielo abierto. Su gran "
-"deseo le fue finalmente concedido.\n"
+"que ni siquiera reconociera a la bestia. Su forma petrificada aún permanece "
+"allí hasta hoy, calentada por los rayos del sol, bajo un cielo abierto. Su "
+"mayor deseo le había sido concedido.\n"
 "(inscrito por Saqueador Elfo)"
 
 #. [side]
