--- a/po/wesnoth-nr/es.po
+++ b/po/wesnoth-nr/es.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
-"PO-Revision-Date: 2018-09-16 16:57+0200\n"
+"PO-Revision-Date: 2019-03-26 12:48+0100\n"
 "Last-Translator: Pepe <donpepe1963@gmail.com>\n"
 "Language-Team: Spanish <kde-i18n-doc@kde.org>\n"
 "Language: es\n"
@@ -140,14 +140,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Northern_Rebirth/scenarios/01_Breaking_the_Chains.cfg:23
-#, fuzzy
-#| msgid ""
-#| "The dwarves of Knalga, cannily reckoning the gains from trade, built "
-#| "strong fortifications around Dwarven Doors. The people who called it "
-#| "home, dwarven and human alike, knew that the wealth of their city might "
-#| "arouse envy from afar — hence they kept their weapons sharp, and reckoned "
-#| "themselves well able to fight off any bandit gang or petty warlord that "
-#| "could arise in the thinly-settled northlands."
 msgid ""
 "The dwarves of Knalga, cannily reckoning the gains from trade, built strong "
 "fortifications around Dwarven Doors. The people who called it home, dwarven "
@@ -2043,6 +2035,9 @@ msgid ""
 "their claws will weaken you with sickness and disease. Nasty things; let’s "
 "chop them to pieces before they can leave the canal."
 msgstr ""
+"¡Gules! Sienten un hambre insaciable por la carne e incluso el más leve "
+"arañazo de sus garras te debilitará y enfermará. Cosas repugnantes; "
+"hagamoslos pedazos antes de que puedan salir del canal."
 
 #. [message]: speaker=Malifor
 #: data/campaigns/Northern_Rebirth/scenarios/04_Clearing_the_Mines.cfg:588
@@ -2444,19 +2439,14 @@ msgstr ""
 
 #. [message]: speaker=Sister Thera
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:731
-#, fuzzy
-#| msgid ""
-#| "If you have no objection, Tallin, we would like to join you. These "
-#| "northlands are hardly safe these days for anyone to be traveling on their "
-#| "own, and we could lend valuable help to your cause."
 msgid ""
 "If you have no objection, Tallin, we would like to join you. These "
 "Northlands are hardly safe these days for anyone to be traveling on their "
 "own, and we could lend valuable help to your cause."
 msgstr ""
-"Si no tenéis problema con ello Tallin, me gustaría unirme a vosotros. Estas "
-"tierras hoy en día no son nada seguras para los viajeros, y podríamos "
-"entregaros valiosa ayuda para vuestra causa."
+"Si no tenéis problema con ello Tallin, nos gustaría unirnos a vosotros. "
+"Estas tierras norteñas no son nada seguras para los viajeros solitarios en "
+"los tiempos que corren, y podríamos ser de gran ayuda para vuestra causa."
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:736
@@ -6130,6 +6120,8 @@ msgid ""
 "You will win this scenario immediately upon moving onto the hex containing "
 "the Princess’s cage"
 msgstr ""
+"Se completará el escenario en el momento en el que se alcance el hexágono "
+"ocupado por la jaula de la princesa"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Northern_Rebirth/scenarios/08a_Elvish_Princess.cfg:336
@@ -6192,32 +6184,26 @@ msgid ""
 "The intruders are breaking in! Get to the walls and defend the fortress! And "
 "where did that Elvish Princess go?"
 msgstr ""
+"¡Los intrusos están irrumpiendo! ¡Situaros en los muros para defender la "
+"fortaleza! ¿Y donde diablos está esa princesa elfa?"
 
 #. [message]: speaker=Eryssa
 #: data/campaigns/Northern_Rebirth/scenarios/08a_Elvish_Princess.cfg:398
-#, fuzzy
-#| msgid ""
-#| "I am free! Thank you, my saviors. Who has come to rescue me from vile "
-#| "captivity?"
 msgid ""
 "(<i>hushed</i>) Thank you, my saviors. Who has come to rescue me from vile "
 "captivity?"
 msgstr ""
-"¡Estoy libre! Gracias, mis salvadores. ¿Quién ha venido a rescatarme de "
+"(<i>susurro</i>) Gracias, mis salvadores. ¿Quién ha venido a rescatarme de "
 "éstos viles captores?"
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/08a_Elvish_Princess.cfg:404
-#, fuzzy
-#| msgid ""
-#| "Later, princess, first let’s get outta — uh, let us take our leave of "
-#| "this place as swiftly as may be!"
 msgid ""
 "(<i>whispering</i>) Later, princess, first let’s get outta — uh, let us take "
 "our leave of this place as swiftly as may be!"
 msgstr ""
-"¡Luego, princesa, primero huyamos de — eh, abandonemos este lugar tan pronto "
-"como nos sea posible!"
+"(<i>susurrando</i>) Luego, princesa, primero huyamos de — eh, ¡abandonemos "
+"este lugar tan pronto como nos sea posible!"
 
 #. [message]: speaker=Eryssa
 #: data/campaigns/Northern_Rebirth/scenarios/08a_Elvish_Princess.cfg:409
@@ -7207,12 +7193,6 @@ msgstr ""
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/09a_Introductions.cfg:240
-#, fuzzy
-#| msgid ""
-#| "Princess, we are not seeking to do business here: <i>“I do this for you "
-#| "and you do this for me.”</i> No, we seek to build everlasting friendships "
-#| "which will forever ensure the peace and prosperity of these northlands. "
-#| "Therefore, let there be no talk of debts and repayments between us."
 msgid ""
 "Princess, we are not seeking to do business here: <i>“I do this for you and "
 "you do this for me.”</i> No, we seek to build everlasting friendships which "
@@ -7220,7 +7200,7 @@ msgid ""
 "let there be no talk of debts and repayments between us."
 msgstr ""
 "Princesa, no buscamos hacer negocios aquí: <i>«yo hago esto por vos y vos "
-"esto por mí»</i>. No, buscamos construir amistades duraderas que aseguren "
+"esto por mí.»</i>. No, buscamos construir amistades duraderas que aseguren "
 "por siempre la paz y prosperidad de estas tierras norteñas. Así que no habrá "
 "discusión de pagos y deudas entre nosotros."
 
@@ -7435,10 +7415,8 @@ msgstr "Mueva a Tallin a la señal en el norte"
 #: data/campaigns/Northern_Rebirth/scenarios/11a_The_Eastern_Flank.cfg:478
 #: data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg:484
 #: data/campaigns/Northern_Rebirth/scenarios/13a_Showdown.cfg:959
-#, fuzzy
-#| msgid "Death of Stalrag"
 msgid "Death of Eryssa"
-msgstr "Muerte de Stalrag"
+msgstr "Muerte de Eryssa"
 
 #. [message]: role=Supporter
 #: data/campaigns/Northern_Rebirth/scenarios/09a_Introductions.cfg:446
@@ -9233,7 +9211,7 @@ msgstr "Derrote a los orcos"
 #. [note]
 #: data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg:498
 msgid "You will not receive any gold if Sisal dies."
-msgstr ""
+msgstr "No recibirás ningún oro si muere Sisal."
 
 #. [message]: id=Ha'Tuil
 #: data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg:517
@@ -9267,16 +9245,12 @@ msgstr "¡Jaja! ¡Tenemos el oro ahora!"
 
 #. [message]: id=Ha'Tuil
 #: data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg:552
-#, fuzzy
-#| msgid ""
-#| "Hahaha! Mission accomplished, men! Now let’s crush the rest of this scum "
-#| "and report back to the Master."
 msgid ""
 "Hahaha! Mission accomplished! I’ll send a wolf to the Master to deliver the "
 "gold. Now let’s crush the rest of this scum!"
 msgstr ""
-"¡Jajaja! ¡Misión cumplida, soldados! Ahora, aplastemos al resto de esta "
-"escoria y volvamos con el Amo."
+"¡Jajaja! ¡Misión cumplida! Enviaré un lobo al Amo para entregar el oro. "
+"¡Ahora, aplastemos al resto de esta escoria!"
 
 #. [message]: id=Eryssa
 #: data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg:564
@@ -10755,12 +10729,12 @@ msgstr "¡Ay!, ¡Ay de mí! ¡Pero debéis continuar vuestra misión sin mí!"
 #. [message]: speaker=Elenia
 #: data/campaigns/Northern_Rebirth/utils/herodeaths.cfg:827
 msgid "Eryssa, no! Please don’t die!"
-msgstr "¡Eryssa, no! ¡Por favor, no os mueras!"
+msgstr "¡Eryssa, no! ¡Por favor, no os muráis!"
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/utils/herodeaths.cfg:834
 msgid "How could this happen? We can’t possibly go on without her..."
-msgstr ""
+msgstr "¿Cómo ha podido pasar esto? No podremos seguir sin ella..."
 
 #: data/campaigns/Northern_Rebirth/utils/utils.cfg:114
 msgid "Arthian"
